fixed 10px white gap between wood background and black navigation bar in menu route. Also fixed #41 by adding a for loop in event handler executing the removeCover function with a 1 second timeout.

--- a/HiTea/static/css/main.css
+++ b/HiTea/static/css/main.css
@@ -216,7 +216,8 @@ MENU CSS
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-	margin-top: 10px;
+	padding-top: 10px;
+	box-sizing: border-box;
 	flex: 1 0 auto;
 }
 
